--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Duelyst Deck list(s) and Help</title>
+    <title>Duelyst Deck list(s) and Help | Pyrogunx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Pyrogunx - Duelyst Deck list(s) and help</h1>
+      <h1 class="project-name">Duelyst Deck list(s) and Help</h1>
       <h2 class="project-tagline">Duelyst decklists, tools, new player help, and so on</h2>
     </section>
 
