--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Pyrogunx's Duelyst info.</h3>
 
 <p>I put together this page as a newer duelyst player myself with a lot of questions. I've seen and recieved many of the same sort of questions, so I figured I'd go ahead and share the knowledge! Hope you find the page helpful, and if you have the time, <a href="http://www.twitch.tv/pyrogunx">feel free to come hang out and watch some duelyst on twitch</a>!</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How Do I Build My Card Collection?</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>If you're simialr to me and have just recently gotten started, building your card collection is key! You're in look, Duelyst is incredibly generous in the amount of cards you can earn and their Core set drop rates. Below is how you can quickly start building up your collect:</p>
+<ol>
+  <li>Get every hero to level 10 in practice. Then get them to level 11 (requires about 2 ranked games) so you've unlocked all heroes as well.</li>
+  <li>Play all the solo challenges. Each solo challenge gives you gold.</li>
+  <li>Play 4 games a day (the quests) on ladder. That alone will tend to net you at least one pack, sometimes more worth of gold.</li>
+  <li>Not dissimilar to Hearthstone, once you're more comfortable, Gauntlet tends to be a better investment of gold (150) if you can get even around 3 wins. If you can "go infinite" (get enough gold from winning to pay for your next) then you're basically set for building your collection.</li>
+  <li>Play ladder. There tends to be different rewards you get just for playing as well that net you gold.</li>
+</ol>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What Are the Different Factions Like?</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
