--- a/duelyst-removal-list.html
+++ b/duelyst-removal-list.html
@@ -17,9 +17,9 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Pyrogunx's Duelyst info.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Overview</h3>
 
-<p>I put together this page as a newer duelyst player myself with a lot of questions. I've seen and recieved many of the same sort of questions, so I figured I'd go ahead and share the knowledge! Hope you find the page helpful, and if you have the time, <a href="http://www.twitch.tv/pyrogunx">feel free to come hang out and watch some duelyst on twitch</a>!</p>
+<p>As a new player, one thing I am often trying to remember is what removal I need to watch out for/play around. This page focuses on, by faction and with some consideration of the current meta, what to look out for while playing.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How Do I Build My Card Collection?</h3>
@@ -32,21 +32,6 @@
   <li>Not dissimilar to Hearthstone, once you're more comfortable, Gauntlet tends to be a better investment of gold (150) if you can get even around 3 wins. If you can "go infinite" (get enough gold from winning to pay for your next) then you're basically set for building your collection.</li>
   <li>Play ladder. There tends to be different rewards you get just for playing as well that net you gold.</li>
 </ol>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What Are the Different Factions Like?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/pyrogunx/duelyst">Pyrogunx - Duelyst Deck list(s) and help</a> is maintained by <a href="https://github.com/pyrogunx">pyrogunx</a>.</span>
