--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Duelyst Deck list(s) and Help</h1>
       <h2 class="project-tagline">Duelyst decklists, tools, new player help, and so on</h2>
+      <h3>Current Meta</h3>
     </section>
 
     <section class="main-content">
