--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <section class="page-header">
       <h1 class="project-name">Duelyst Deck list(s) and Help</h1>
       <h2 class="project-tagline">Duelyst decklists, tools, new player help, and so on</h2>
+      <div>
+        <a href="http://managlow.com/manaranks/" class="btn">Current Meta <small>(Managlow)</small></a>
+        
+      </div>
     </section>
 
     <section class="main-content">
