--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Pyrogunx Duelyst Home</h1>
       <h2 class="project-tagline">Duelyst decklists, tools, new player help, and so on</h2>
       <div>
-        <a href="/" class="btn">Decklists</a>
+        <a href="/duelyst/" class="btn">Decklists</a>
         <a href="http://managlow.com/manaranks/" class="btn">Current Meta <small>(Managlow)</small></a>
         <a href="/new-player-help" class="btn">New Player Help</a>
       </div>
