--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div>
         <a href="/duelyst/" class="btn">Decklists</a>
         <a href="http://managlow.com/manaranks/" class="btn">Current Meta <small>(Managlow)</small></a>
-        <a href="/new-player-help" class="btn">New Player Help</a>
+        <a href="/new-player-help.html" class="btn">New Player Help</a>
       </div>
     </section>
 
