--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Positioning</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>I played Hearthstone quite a bit, but I can honestly tell you that while positioning mattered in HS, it is critical in Duelyst. I can honestly say that I've won games against better decks with better cards just because of having better positioning throughout the game. Here's a few videos I found helpful around positioning:
+<ol>
+  <li>Your opening hand, what you mulligan, and how you position yourself for the first 2 - 3 moves is critical. <a href="https://www.youtube.com/watch?v=bjh1BRAqqIk">This video on Openings</a> will hopefully help you improve that.</li>
+  <li>Positioning for control is also critical.</li>
+  <li>The Duelyst blog itself also has a <a href="https://news.duelyst.com/positioning-202-conservative-combat/">great article</a> on positioning to avoid removal.</li>
+</ol>
+</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
