--- a/index.html
+++ b/index.html
@@ -41,7 +41,22 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What Are the Different Factions Like?</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>
+<table>
+  <th>
+    <td>Faction</td>
+    <td>Hearthstone Equivalent</td>
+    <td>Description</td>
+  </th>
+  <tr>
+    <td>Songhai</td>
+    <td>Mage / Rogue</td>
+    <td>Songhai to me has been a combination of a mage and rogue. You can go full spells and have a lot of options for direct damage with it, but then you also have the more "stealth" like options with backstab as well as a lot of maneuverability spells.</td>
+  </tr>
+  
+</table>  
+  
+</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Positioning</h3>
@@ -53,12 +68,6 @@
   <li>The Duelyst blog itself also has a <a href="https://news.duelyst.com/positioning-202-conservative-combat/">great article</a> on positioning to avoid removal.</li>
 </ol>
 </p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/pyrogunx/duelyst">Pyrogunx - Duelyst Deck list(s) and help</a> is maintained by <a href="https://github.com/pyrogunx">pyrogunx</a>.</span>
       </footer>
