--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
 <p>
 <table>
-  <th>
-    <td>Faction</td>
-    <td>Hearthstone Equivalent</td>
-    <td>Description</td>
-  </th>
+  <tr>
+    <th>Faction</th>
+    <th>Hearthstone Equivalent</th>
+    <th>Description</th>
+  </tr>
   <tr>
     <td>Songhai</td>
     <td>Mage / Rogue</td>
