--- a/index.html
+++ b/index.html
@@ -53,7 +53,26 @@
     <td>Mage / Rogue</td>
     <td>Songhai to me has been a combination of a mage and rogue. You can go full spells and have a lot of options for direct damage with it, but then you also have the more "stealth" like options with backstab as well as a lot of maneuverability spells.</td>
   </tr>
-  
+  <tr>
+    <td>Vetruvian</td>
+    <td>Druid</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Lyonar</td>
+    <td>Paladin / Priest</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Abyssian</td>
+    <td>Warlock</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Magmar</td>
+    <td>Warrior / Shaman</td>
+    <td></td>
+  </tr>
 </table>  
   
 </p>
