--- a/index.html
+++ b/index.html
@@ -56,22 +56,27 @@
   <tr>
     <td>Vetruvian</td>
     <td>Druid</td>
-    <td></td>
+    <td>There's a lot of minion buffing potential here to make early game intimidating and late game a big threat. Vetruvian can also add structures to the board providing interesting means of game control.</td>
   </tr>
   <tr>
     <td>Lyonar</td>
     <td>Paladin / Priest</td>
-    <td></td>
+    <td>Zeal gives your minions boosts while they're near your general. Board control here tends to be through bigger provokes. Celerity is a scary combination (attack/move twice) with Lyonar. Buffing/healing self and existing minions can make pushing forward difficult.</td>
   </tr>
   <tr>
     <td>Abyssian</td>
     <td>Warlock</td>
-    <td></td>
+    <td>Control the board with Creep or swarm it with Wraithlings. There's a number of abilities that are about taking out your low cost minions at an increased impact on the board.</td>
   </tr>
   <tr>
     <td>Magmar</td>
     <td>Warrior / Shaman</td>
-    <td></td>
+    <td>Make your general bigger and badder. Your minions get bigger with grow. Future turn oriented mechanics through eggs.</td>
+  </tr>
+  <tr>
+    <td>Vanar</td>
+    <td>Hunter</td>
+    <td>Vanar can have board control via walls and setting traps. There is also a good level face activity where you can buff smaller minions due to synergies. Infiltrate is a strong keyword on Vanar, giving your minions buffs when you're on our opponents side of the battlefield.</td>
   </tr>
 </table>  
   
