--- a/new-player-help.html
+++ b/new-player-help.html
@@ -14,9 +14,9 @@
       <h1 class="project-name">Pyrogunx Duelyst Home</h1>
       <h2 class="project-tagline">Duelyst decklists, tools, new player help, and so on</h2>
       <div>
-        <a href="/" class="btn">Decklists</a>
+        <a href="/duelyst/" class="btn">Decklists</a>
         <a href="http://managlow.com/manaranks/" class="btn">Current Meta <small>(Managlow)</small></a>
-        <a href="/new-player-help" class="btn">New Player Help</a>
+        <a href="/new-player-help.html" class="btn">New Player Help</a>
       </div>
     </section>
 
@@ -41,18 +41,57 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What Are the Different Factions Like?</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>
+<table>
+  <tr>
+    <th>Faction</th>
+    <th>Hearthstone Equivalent</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td>Songhai</td>
+    <td>Mage / Rogue</td>
+    <td>Songhai to me has been a combination of a mage and rogue. You can go full spells and have a lot of options for direct damage with it, but then you also have the more "stealth" like options with backstab as well as a lot of maneuverability spells.</td>
+  </tr>
+  <tr>
+    <td>Vetruvian</td>
+    <td>Druid</td>
+    <td>There's a lot of minion buffing potential here to make early game intimidating and late game a big threat. Vetruvian can also add structures to the board providing interesting means of game control.</td>
+  </tr>
+  <tr>
+    <td>Lyonar</td>
+    <td>Paladin / Priest</td>
+    <td>Zeal gives your minions boosts while they're near your general. Board control here tends to be through bigger provokes. Celerity is a scary combination (attack/move twice) with Lyonar. Buffing/healing self and existing minions can make pushing forward difficult.</td>
+  </tr>
+  <tr>
+    <td>Abyssian</td>
+    <td>Warlock</td>
+    <td>Control the board with Creep or swarm it with Wraithlings. There's a number of abilities that are about taking out your low cost minions at an increased impact on the board.</td>
+  </tr>
+  <tr>
+    <td>Magmar</td>
+    <td>Warrior / Shaman</td>
+    <td>Make your general bigger and badder. Your minions get bigger with grow. Future turn oriented mechanics through eggs.</td>
+  </tr>
+  <tr>
+    <td>Vanar</td>
+    <td>Hunter</td>
+    <td>Vanar can have board control via walls and setting traps. There is also a good level face activity where you can buff smaller minions due to synergies. Infiltrate is a strong keyword on Vanar, giving your minions buffs when you're on our opponents side of the battlefield.</td>
+  </tr>
+</table>  
+  
+</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Positioning</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-
+<p>I played Hearthstone quite a bit, but I can honestly tell you that while positioning mattered in HS, it is critical in Duelyst. I can honestly say that I've won games against better decks with better cards just because of having better positioning throughout the game. Here's a few videos I found helpful around positioning:
+<ol>
+  <li>Your opening hand, what you mulligan, and how you position yourself for the first 2 - 3 moves is critical. <a href="https://www.youtube.com/watch?v=bjh1BRAqqIk">This video on Openings</a> will hopefully help you improve that.</li>
+  <li>Positioning for control is also critical.</li>
+  <li>The Duelyst blog itself also has a <a href="https://news.duelyst.com/positioning-202-conservative-combat/">great article</a> on positioning to avoid removal.</li>
+</ol>
+</p>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/pyrogunx/duelyst">Pyrogunx - Duelyst Deck list(s) and help</a> is maintained by <a href="https://github.com/pyrogunx">pyrogunx</a>.</span>
       </footer>
