--- a/duelyst-removal-list.html
+++ b/duelyst-removal-list.html
@@ -11,15 +11,21 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Duelyst Deck list(s) and Help</h1>
+      <h1 class="project-name">Pyrogunx Duelyst Home</h1>
       <h2 class="project-tagline">Duelyst decklists, tools, new player help, and so on</h2>
+      <div>
+        <a href="/duelyst/" class="btn">Decklists</a>
+        <a href="http://managlow.com/manaranks/" class="btn">Current Meta <small>(Managlow)</small></a>
+         <a href="/duelyst-removal-list.html" class="btn">In-Game Helper</a>
+        <a href="/new-player-help.html" class="btn">New Player Help</a>
+      </div>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Overview</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>In-Game Removal Helper</h3>
 
-<p>As a new player, one thing I am often trying to remember is what removal I need to watch out for/play around. This page focuses on, by faction and with some consideration of the current meta, what to look out for while playing.</p>
+<p>When learning a new game, the curse of knowledge (not knowing every card yet, combos, etc) is one of the things that separates new players from good players. In card games, this is often based around removal or big plays to be aware of. I've documented some (not all) of the removals/plays to be aware of by faction for when you're playing!</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How Do I Build My Card Collection?</h3>
@@ -32,6 +38,7 @@
   <li>Not dissimilar to Hearthstone, once you're more comfortable, Gauntlet tends to be a better investment of gold (150) if you can get even around 3 wins. If you can "go infinite" (get enough gold from winning to pay for your next) then you're basically set for building your collection.</li>
   <li>Play ladder. There tends to be different rewards you get just for playing as well that net you gold.</li>
 </ol>
+
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/pyrogunx/duelyst">Pyrogunx - Duelyst Deck list(s) and help</a> is maintained by <a href="https://github.com/pyrogunx">pyrogunx</a>.</span>
