--- a/index.html
+++ b/index.html
@@ -27,21 +27,10 @@
 <p>I put together this page as a newer duelyst player myself with a lot of questions. I've seen and recieved many of the same sort of questions, so I figured I'd go ahead and share the knowledge! Hope you find the page helpful, and if you have the time, <a href="http://www.twitch.tv/pyrogunx">feel free to come hang out and watch some duelyst on twitch</a>!</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How Do I Build My Card Collection?</h3>
-
-<p>If you're simialr to me and have just recently gotten started, building your card collection is key! You're in look, Duelyst is incredibly generous in the amount of cards you can earn and their Core set drop rates. Below is how you can quickly start building up your collect:</p>
-<ol>
-  <li>Get every hero to level 10 in practice. Then get them to level 11 (requires about 2 ranked games) so you've unlocked all heroes as well.</li>
-  <li>Play all the solo challenges. Each solo challenge gives you gold.</li>
-  <li>Play 4 games a day (the quests) on ladder. That alone will tend to net you at least one pack, sometimes more worth of gold.</li>
-  <li>Not dissimilar to Hearthstone, once you're more comfortable, Gauntlet tends to be a better investment of gold (150) if you can get even around 3 wins. If you can "go infinite" (get enough gold from winning to pay for your next) then you're basically set for building your collection.</li>
-  <li>Play ladder. There tends to be different rewards you get just for playing as well that net you gold.</li>
-</ol>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What Are the Different Factions Like?</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Decklists</h3>
 
 <p>
+  Below are decks I've ran successfully, or those that I've seen played that are effective. See the notes of each deck for more info.
 <table>
   <tr>
     <th>Faction</th>
