--- a/new-player-help.html
+++ b/new-player-help.html
@@ -83,6 +83,13 @@
 </p>
 
 <h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strong Neutral Cards</h3>
+
+<p>The below is by no means the complete list, but are neutral cards I've experienced to be pretty solid regardless of deck, or cards I've heard others comment on.
+
+</p>
+
+<h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Positioning</h3>
 
 <p>I played Hearthstone quite a bit, but I can honestly tell you that while positioning mattered in HS, it is critical in Duelyst. I can honestly say that I've won games against better decks with better cards just because of having better positioning throughout the game. Here's a few videos I found helpful around positioning:
