--- a/index.html
+++ b/index.html
@@ -27,59 +27,29 @@
 <p>I put together this page as a newer duelyst player myself with a lot of questions. I've seen and recieved many of the same sort of questions, so I figured I'd go ahead and share the knowledge! Hope you find the page helpful, and if you have the time, <a href="http://www.twitch.tv/pyrogunx">feel free to come hang out and watch some duelyst on twitch</a>!</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Decklists</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Decks</h3>
 
 <p>
-  Below are decks I've ran successfully, or those that I've seen played that are effective. See the notes of each deck for more info.
-<table>
-  <tr>
-    <th>Faction</th>
-    <th>Hearthstone Equivalent</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td>Songhai</td>
-    <td>Mage / Rogue</td>
-    <td>Songhai to me has been a combination of a mage and rogue. You can go full spells and have a lot of options for direct damage with it, but then you also have the more "stealth" like options with backstab as well as a lot of maneuverability spells.</td>
-  </tr>
-  <tr>
-    <td>Vetruvian</td>
-    <td>Druid</td>
-    <td>There's a lot of minion buffing potential here to make early game intimidating and late game a big threat. Vetruvian can also add structures to the board providing interesting means of game control.</td>
-  </tr>
-  <tr>
-    <td>Lyonar</td>
-    <td>Paladin / Priest</td>
-    <td>Zeal gives your minions boosts while they're near your general. Board control here tends to be through bigger provokes. Celerity is a scary combination (attack/move twice) with Lyonar. Buffing/healing self and existing minions can make pushing forward difficult.</td>
-  </tr>
-  <tr>
-    <td>Abyssian</td>
-    <td>Warlock</td>
-    <td>Control the board with Creep or swarm it with Wraithlings. There's a number of abilities that are about taking out your low cost minions at an increased impact on the board.</td>
-  </tr>
-  <tr>
-    <td>Magmar</td>
-    <td>Warrior / Shaman</td>
-    <td>Make your general bigger and badder. Your minions get bigger with grow. Future turn oriented mechanics through eggs.</td>
-  </tr>
-  <tr>
-    <td>Vanar</td>
-    <td>Hunter</td>
-    <td>Vanar can have board control via walls and setting traps. There is also a good level face activity where you can buff smaller minions due to synergies. Infiltrate is a strong keyword on Vanar, giving your minions buffs when you're on our opponents side of the battlefield.</td>
-  </tr>
-</table>  
+  Below are decks I've ran and had success with. They are not going to be as perfected as some of the decks that you see S-Rank players, but these are decks I've climbed with.
+<ol>
+  <li>Vetruvian pseud-budget. Ran this deck from 30 (started this month) to around 16.</li>
+  <li>Vetruvian Midrange 2. Ran this from 16 to around 11 and then my win rate wasn't as good.</li>
+  <li>Lyonar Counter. This deck is heavy taunt and dispel oriented - tends to counter well a lot of the meta right now. Used this from around 12 - 10.</li>
+  <li>Creepy Cassyva. This deck is focused on creep combos. It's a more expensive deck and not perfected, but I got a decent winrate with it.</li>
+</ol>
   
 </p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Positioning</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other Decks</h3>
 
-<p>I played Hearthstone quite a bit, but I can honestly tell you that while positioning mattered in HS, it is critical in Duelyst. I can honestly say that I've won games against better decks with better cards just because of having better positioning throughout the game. Here's a few videos I found helpful around positioning:
+<p>
+  Below are decks I've ran successfully, or those that I've seen played that are effective. See the notes of each deck for more info.
 <ol>
-  <li>Your opening hand, what you mulligan, and how you position yourself for the first 2 - 3 moves is critical. <a href="https://www.youtube.com/watch?v=bjh1BRAqqIk">This video on Openings</a> will hopefully help you improve that.</li>
-  <li>Positioning for control is also critical.</li>
-  <li>The Duelyst blog itself also has a <a href="https://news.duelyst.com/positioning-202-conservative-combat/">great article</a> on positioning to avoid removal.</li>
+  <li></li>
+  <li></li>
 </ol>
+  
 </p>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/pyrogunx/duelyst">Pyrogunx - Duelyst Deck list(s) and help</a> is maintained by <a href="https://github.com/pyrogunx">pyrogunx</a>.</span>
