--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 <p>
   Below are decks I've ran successfully, or those that I've seen played that are effective. See the notes of each deck for more info.
 <ol>
-  <li></li>
-  <li></li>
+  <li><a href="https://forums.duelyst.com/t/ryanhs-decks-for-every-general-shimzar/3288">Check out Ryan's post on Duelyst forums.</a> He does a nice job outlining budget decks for each general. If you're curious on other picks and feedback, the comments on the post are great as well.</li>
 </ol>
   
 </p>
